se importan modulos de funciones desarrollados en la sesión

--- a/Sesion11/Sesion11_Funciones.ipynb
+++ b/Sesion11/Sesion11_Funciones.ipynb
@@ -664,11 +664,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"fabian\""
+    "from ejercicios import palindromo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usted ingreso la palabra: reconocer\n",
+      "palabra en modo reverse: reconocer\n",
+      "agregando la letra: r de la cadena, a la lista de verificacion de palindromo\n",
+      "agregando la letra: e de la cadena, a la lista de verificacion de palindromo\n",
+      "agregando la letra: c de la cadena, a la lista de verificacion de palindromo\n",
+      "agregando la letra: o de la cadena, a la lista de verificacion de palindromo\n",
+      "agregando la letra: n de la cadena, a la lista de verificacion de palindromo\n",
+      "agregando la letra: o de la cadena, a la lista de verificacion de palindromo\n",
+      "agregando la letra: c de la cadena, a la lista de verificacion de palindromo\n",
+      "agregando la letra: e de la cadena, a la lista de verificacion de palindromo\n",
+      "agregando la letra: r de la cadena, a la lista de verificacion de palindromo\n",
+      "Se finalizo la comprobacion del palindromo...\n",
+      "Lista Palindromo: ['r', 'e', 'c', 'o', 'n', 'o', 'c', 'e', 'r']\n",
+      "Lista palabra incial: reconocer\n",
+      "La palabra es un palindromo\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultadoPalindromo = palindromo.determinarPalindromo(\"reconocer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (resultadoPalindromo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usted ingreso la palabra: ejemplo\n",
+      "palabra en modo reverse: olpmeje\n",
+      "agregando la letra: m de la cadena, a la lista de verificacion de palindromo\n",
+      "Se finalizo la comprobacion del palindromo...\n",
+      "Lista Palindromo: ['m']\n",
+      "Lista palabra incial: ejemplo\n",
+      "La palabra no es un palindromo\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultadoPalindromo2 = palindromo.determinarPalindromo()"
    ]
   }
  ],
